syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.idm.grpc";
option java_outer_classname = "IdmProto";

package idm;

service IdmService {
    rpc Login(LoginRequest) returns (LoginResponse);

    rpc ValidateToken(TokenRequest) returns (ValidateTokenResponse);

    rpc Logout(TokenRequest) returns (LogoutResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string token = 2;
    string message = 3;
}

message TokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string sub = 2;
  string role = 3;
  string message = 4;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}